# Contacts_REST_API

./: .coverage  .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4b9163fa6192_is_active_for_users.py  716a944dee33_initial_tables.py  bfd3aabbb6cb_add_user_model.py  fc502d6cf0ae_add_user_model.py  fe58e27af5e9_add_avatar_url_to_users.py
app/: main.py  schemes.py
config/: db.py  general.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/src/auth/: repo.html  router.html
docs/_build/html/_modules/src/contacts/: repos.html  router.html
src/auth/: cloudinary_config.py  mail_utils.py  models.py  pass_utils.py  repo.py  router.py  schemas.py  utils.py
src/contacts/: models.py  repos.py  router.py  schemas.py
src/templates/: verification_email.html
tests/: conftest.py  test_auth.py  test_health.py  test_unit_repository_contacts.py
